AbstractDetection.fireUpdate() now updates old detections, if possible